# qb

./: CLAUDE.md  Cargo.toml  neomake.yaml
crates/qb/: Cargo.toml
crates/qb/src/: args.rs  config.rs  main.rs  portforward.rs
crates/qb/src/k8s/: mod.rs
crates/qb/src/tui/: app.rs  command.rs  logs.rs  mod.rs  smart.rs  ui.rs
docs/: README.md
src/: args.rs  main.rs
