[package]
name = "qb"
version = "0.0.0"
authors = ["cchexcode <alexanderh.weber@outlook.com>"]
edition = "2024"
license = "MIT"
description = "qb"
homepage = "https://github.com/cchexcode/qb"
repository = "https://github.com/cchexcode/qb"
keywords = []
categories = ["command-line-utilities"]
readme = "docs/README.md"

[features]
default = []

[dependencies]
tokio = { version = "1.47.1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "process",
    "io-util",
    "time",
    "sync",
] }
async-trait = "0.1.83"
clap = "4.5.45"
clap_complete = "4.5.57"
clap_mangen = "0.2.29"
clap-markdown = "0.1.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.142"
anyhow = "1.0.99"
path-clean = "1.0.1"
