[workspace]
resolver = "2"
members = ["crates/qb"]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/cchexcode/qb"
description = "A fast, keyboard-driven terminal UI for browsing Kubernetes clusters"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
ratatui = "0.30.0"
crossterm = "0.29.0"
kube = { version = "3.0.1", features = ["client", "rustls-tls"], default-features = false }
rustls = { version = "0.23", features = ["ring"], default-features = false }
k8s-openapi = { version = "0.27.1", features = ["latest"] }
jiff = "0.2"
arboard = "3"
base64 = "0.22"
regex = "1"
futures = "0.3"
