[package]
name = "qb"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme = "../../docs/README.md"

[[bin]]
name = "qb"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
rustls = { workspace = true }
jiff = { workspace = true }
arboard = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }
futures = { workspace = true }
similar = { workspace = true }
tempfile = { workspace = true }
semver = { workspace = true }
dirs = { workspace = true }
